# LocalTrustDiaries

./: CMakeLists.txt
TrustNode/: TrustNode.h  TrustNode_ops.h
Types/: AckType.h
adapter/: LTDAdapter.cpp  LTDAdapter.h
utils/: Size_Offsets.h
